--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.orientechnologies</groupId>
-    <name>OrientDB Gremlin Server</name>
+    <name>OrientDB Gremlin Server Plugin</name>
     <artifactId>orientdb-gremlin-server</artifactId>
     <properties>
         <tinkerpop.version>3.2.3</tinkerpop.version>
@@ -125,31 +125,7 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <id>distribution-package</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <descriptors>
-                                <descriptor>src/main/assembly/archive.xml</descriptor>
-                            </descriptors>
-                            <filters>
-                                <filter></filter>
-                            </filters>
-                            <ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
-                            <tarLongFileMode>gnu</tarLongFileMode>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
         </plugins>
     </build>
 </project>
