--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "@angular/platform-browser": "^2.2.4",
     "@angular/platform-browser-dynamic": "^2.2.4",
     "@angular/upgrade": "^2.2.4",
+    "@angularclass/hmr": "^1.2.2",
+    "@angularclass/hmr-loader": "^3.0.2",
     "angular": "1.5.9",
     "angular-animate": "1.5.9",
     "angular-bootstrap-switch": "^0.5.1",
     "angular-local-storage": "^0.2.7",
+    "angular-motion": "0.4.4",
     "angular-resource": "1.5.9",
     "angular-route": "1.5.9",
     "angular-sanitize": "1.5.9",
     "angular-scroll": "^1.0.0",
-    "angular-motion" : "0.4.4",
     "angular-smart-table": "^2.1.8",
     "angular-spectrum-colorpicker": "^1.4.5",
     "angular-strap": "2.3.9",
@@ -60,6 +62,17 @@
     "watch": "webpack-dev-server --hot --inline --progress --colors --watch-poll"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^7.0.5",
+    "@types/protractor": "^4.0.0",
+    "@types/selenium-webdriver": "^2.53.39",
+    "@types/source-map": "^0.5.0",
+    "@types/uglify-js": "^2.6.28",
+    "@types/webpack": "^2.2.5",
+    "angular2-router-loader": "^0.3.4",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.0.4-rc.0",
     "babel-core": "6.4.0",
     "babel-loader": "6.2.1",
     "babel-preset-es2015": "6.3.13",
@@ -72,6 +85,7 @@
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
     "style-loader": "0.13.0",
+    "typescript": "^2.1.6",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-server": "2.1.0-beta.12"
