--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "watch": "webpack-dev-server --hot --inline --progress --colors --watch-poll"
   },
   "devDependencies": {
+    "@types/angular": "^1.6.5",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.5.41",
     "@types/node": "^7.0.5",
@@ -87,8 +88,8 @@
     "style-loader": "0.13.0",
     "typescript": "^2.1.6",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.27",
-    "webpack-dev-server": "2.1.0-beta.12"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0"
   },
   "engines": {
     "node": ">=0.8.0"
