--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@angular/platform-browser": "^2.2.4",
     "@angular/platform-browser-dynamic": "^2.2.4",
     "@angular/upgrade": "^2.2.4",
-    "@angularclass/hmr": "^1.2.2",
-    "@angularclass/hmr-loader": "^3.0.2",
     "angular": "1.5.9",
     "angular-animate": "1.5.9",
     "angular-bootstrap-switch": "^0.5.1",
@@ -26,6 +24,7 @@
     "angular-strap": "2.3.9",
     "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
+    "angular2-tag-input": "^1.2.3",
     "babel-polyfill": "^6.16.0",
     "babel-preset-angular2": "0.0.2",
     "bootstrap-switch": "^3.3.2",
@@ -44,7 +43,9 @@
     "moment": "^2.17.0",
     "ng-table": "^1.0.0",
     "ng-tags-input": "^3.1.1",
+    "ng2-bootstrap": "^1.3.3",
     "ng2-codemirror": "^1.1.1",
+    "ng2-tag-input": "^0.8.4",
     "noty": "^2.3.8",
     "nprogress": "^0.2.0",
     "raw-loader": "^0.5.1",
@@ -63,18 +64,6 @@
     "watch": "webpack-dev-server --hot --inline --progress --colors --watch-poll"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.5",
-    "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.41",
-    "@types/node": "^7.0.5",
-    "@types/protractor": "^4.0.0",
-    "@types/selenium-webdriver": "^2.53.39",
-    "@types/source-map": "^0.5.0",
-    "@types/uglify-js": "^2.6.28",
-    "@types/webpack": "^2.2.5",
-    "angular2-router-loader": "^0.3.4",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.0.4-rc.0",
     "babel-core": "6.4.0",
     "babel-loader": "6.2.1",
     "babel-preset-es2015": "6.3.13",
@@ -87,12 +76,20 @@
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
     "style-loader": "0.13.0",
-    "typescript": "^2.1.6",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.12"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "map": {
+    "ngx-popover": "node_modules/ngx-popover"
+  },
+  "packages": {
+    "ngx-popover": {
+      "main": "index.js",
+      "defaultExtension": "js"
+    }
   }
 }
