--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <module>agent</module>
         <module>lucene-cross-class</module>
         <module>distribution</module>
-        <!--<module>lucene-performance</module>-->
+        <module>lucene-performance</module>
     </modules>
 
 </project>
