--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@types/webpack": "^2.2.5",
     "angular2-router-loader": "^0.3.4",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.0.4-rc.0",
+    "awesome-typescript-loader": "^3.0.7",
     "babel-core": "6.4.0",
     "babel-loader": "6.2.1",
     "babel-preset-es2015": "6.3.13",
