sets etl log level to info

--- a/etl/config/orientdb-etl-log.properties
+++ b/etl/config/orientdb-etl-log.properties
@@ -27,7 +27,7 @@ handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 .level = INFO
 com.orientechnologies.level = INFO
 com.orientechnologies.orient.server.distributed.level = INFO
-com.orientechnologies.orient.etl.level = FINE
+com.orientechnologies.orient.etl.level = INFO
 
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = FINE
