moves log levels configuration on property files

--- a/etl/config/orientdb-etl-log.properties
+++ b/etl/config/orientdb-etl-log.properties
@@ -28,6 +28,11 @@ handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 com.orientechnologies.level = INFO
 com.orientechnologies.orient.server.distributed.level = INFO
 com.orientechnologies.orient.etl.level = INFO
+com.orientechnologies.orient.etl.block.level = INFO
+com.orientechnologies.orient.etl.source.evel = INFO
+com.orientechnologies.orient.etl.extractor.level = INFO
+com.orientechnologies.orient.etl.trasformer.evel = INFO
+com.orientechnologies.orient.etl.loder.evel = INFO
 
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = FINE
